--- a/linguaskill-mock/index.html
+++ b/linguaskill-mock/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Logo-Linguaskill.png" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Mock Linguaskill</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="flex h-full">
+    <div id="root" class="flex h-full flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
