--- a/linguaskill-mock/index.html
+++ b/linguaskill-mock/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mock Linguaskill</title>
   </head>
-  <body class="flex h-full overflow-hidden">
+  <body class="flex h-full">
     <div id="root" class="flex h-full flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
