--- a/linguaskill-mock/index.html
+++ b/linguaskill-mock/index.html
@@ -8,7 +8,7 @@
     <title>Mock Linguaskill</title>
   </head>
   <body class="flex h-full">
-    <div id="root" class="flex h-full flex-col overflow-hidden"></div>
+    <div id="root" class="flex h-full flex-col"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
